--- a/public_html/css/base.css
+++ b/public_html/css/base.css
@@ -2,113 +2,132 @@
 
 /*大枠の基本設定*/
 
-* {
-  margin:0;
-  padding:0;
+*
+{
+    margin:0;
+    padding:0;
 }
 
-h1 {
-  font-size:1.5em;
-  line-height:1.4em;
+h1
+{
+    font-size:1.5em;
+    line-height:1.4em;
 }
 
-h2 {
-  font-size:1.2em;
-  line-height:1.4em;
+h2
+{
+    font-size:1.2em;
+    line-height:1.4em;
 }
 
-h3 {
-  font-size:1em;
-  line-height:1.3em;
+h3
+{
+    font-size:1em;
+    line-height:1.3em;
 }
 
-h4 {
-  font-size:0.9em;
-  line-height:1.2em;
+h4
+{
+    font-size:0.9em;
+    line-height:1.2em;
 }
 
-img {
-  border: none;
+img
+{
+    border: none;
 }
 
-ul {
-  display:block;
-  list-style-type:none;
+ul
+{
+    display:block;
+    list-style-type:none;
 }
 
-li {
-  float:left;
+li
+{
+    float:left;
 }
 
-abbr {
-  border-bottom:1px dotted #666666;
+abbr
+{
+    border-bottom:1px dotted #666666;
 }
 
-hr {
-  display:none;
+hr
+{
+    display:none;
 }
 
-.large_loader {
-  position:absolute;
-  left:30px;
-  top:30px;
-  width:30px;
-  height:30px;
-  border-radius:50%;
-  opacity:0.7;
-  border:10px solid #666;
-  border-left-color:#ccc;
-  -webkit-animation:rot 2s linear infinite;
-  -moz-animation:rot 2s linear infinite;
-  -ms-animation:rot 2s linear infinite;
-  -o-animation:rot 2s linear infinite;
-  -khtml-animation:rot 2s linear infinite;
-  animation:rot 2s linear infinite;
+.large_loader
+{
+    position:absolute;
+    left:30px;
+    top:30px;
+    width:30px;
+    height:30px;
+    border-radius:50%;
+    opacity:0.7;
+    border:10px solid #666;
+    border-left-color:#ccc;
+    -webkit-animation:rot 2s linear infinite;
+    -moz-animation:rot 2s linear infinite;
+    -ms-animation:rot 2s linear infinite;
+    -o-animation:rot 2s linear infinite;
+    -khtml-animation:rot 2s linear infinite;
+    animation:rot 2s linear infinite;
 }
-.small_loader {
-  position:absolute;
-  left:0px;
-  top:0px;
-  margin:2px;
-  width:13px;
-  height:13px;
-  border-radius:50%;
-  opacity:0.7;
-  border:4px solid #666;
-  border-left-color:#ccc;
-  z-index:100;
-  -webkit-animation:rot 2s linear infinite;
-  -moz-animation:rot 2s linear infinite;
-  -ms-animation:rot 2s linear infinite;
-  -o-animation:rot 2s linear infinite;
-  -khtml-animation:rot 2s linear infinite;
-  animation:rot 2s linear infinite;
+.small_loader
+{
+    position:absolute;
+    left:0px;
+    top:0px;
+    margin:2px;
+    width:13px;
+    height:13px;
+    border-radius:50%;
+    opacity:0.7;
+    border:4px solid #666;
+    border-left-color:#ccc;
+    z-index:100;
+    -webkit-animation:rot 2s linear infinite;
+    -moz-animation:rot 2s linear infinite;
+    -ms-animation:rot 2s linear infinite;
+    -o-animation:rot 2s linear infinite;
+    -khtml-animation:rot 2s linear infinite;
+    animation:rot 2s linear infinite;
 }
-@-webkit-keyframes rot {
-  from {-webkit-transform:rotate(0deg);}
-  to {-webkit-transform:rotate(360deg);}
+@-webkit-keyframes rot
+{
+    from {-webkit-transform:rotate(0deg);}
+    to {-webkit-transform:rotate(360deg);}
 }
-@-moz-keyframes rot {
-  from {-moz-transform:rotate(0deg);}
-  to {-moz-transform:rotate(360deg);}
+@-moz-keyframes rot
+{
+    from {-moz-transform:rotate(0deg);}
+    to {-moz-transform:rotate(360deg);}
 }
-@-ms-keyframes rot {
-  from {-ms-transform:rotate(0deg);}
-  to {-ms-transform:rotate(360deg);}
+@-ms-keyframes rot
+{
+    from {-ms-transform:rotate(0deg);}
+    to {-ms-transform:rotate(360deg);}
 }
-@-o-keyframes rot {
-  from {-o-transform:rotate(0deg);}
-  to {-o-transform:rotate(360deg);}
+@-o-keyframes rot
+{
+    from {-o-transform:rotate(0deg);}
+    to {-o-transform:rotate(360deg);}
 }
-@-khtml-keyframes rot {
-  from {-khtml-transform:rotate(0deg);}
-  to {-khtml-transform:rotate(360deg);}
+@-khtml-keyframes rot
+{
+    from {-khtml-transform:rotate(0deg);}
+    to {-khtml-transform:rotate(360deg);}
 }
-@keyframes rot {
-  from {transform:rotate(0deg);}
-  to {transform:rotate(360deg);}
+@keyframes rot
+{
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
 }
 
-.relative {
-  position:relative;
+.relative
+{
+    position:relative;
 }
